samples/_failures_safe/1761166706_c74960_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e21ca8b.c: In function ‘main’:
./samples/SAFE/__tmp_6e21ca8b.c:140:21: error: expected ‘]’ at end of input
  140 |         line[strcspn
      |                     ^
      |                     ]
./samples/SAFE/__tmp_6e21ca8b.c:140:13: error: array subscript is not an integer
  140 |         line[strcspn
      |             ^
./samples/SAFE/__tmp_6e21ca8b.c:140:9: error: expected declaration or statement at end of input
  140 |         line[strcspn
      |         ^~~~
./samples/SAFE/__tmp_6e21ca8b.c:140:9: error: expected declaration or statement at end of input
